--- a/css/main.css
+++ b/css/main.css
@@ -155,6 +155,11 @@ a:focus {
 .exercise__wrong-notification {
 	color: #B50E0E;
 }
+.exercise__answer-image {
+	margin-bottom: 0.3em;
+	max-height: 192px;
+	max-width: 100%;
+}
 .flash {
 	display: none;
 	background: rgba(34, 130, 0, 0.9);
@@ -334,8 +339,22 @@ a:focus {
 /* ==========================================================================
    Layout Specific
    ========================================================================== */
+.layout-3 .exercise__answer-list {
+	text-align: center;
+}
 .layout-3 .exercise__answer {
-	float: left;
 	width: 33%;
-	padding: 0 4%;
+	padding: 0 1%;
+	display: inline-block;
+	vertical-align: top;
+	margin-bottom: 1em;
+	height: 238px;
+}
+.layout-3 .exercise__answer-text {
+	height: 100%;
+	display: table;
+}
+.layout-3 .exercise__answer-text-inner {
+	display: table-cell;
+	vertical-align: middle;
 }
