--- a/css/main.css
+++ b/css/main.css
@@ -350,6 +350,7 @@ a:focus {
 	top: 50%;
 	font-weight: bold;
 	font-size: 1.2em;
+	z-index: 10;
 	
 }
 .answer-checked .exercise__answer.is-selected:before {
@@ -371,12 +372,9 @@ a:focus {
 }
 .layout-3 .answer-checked .exercise__answer.is-selected:before,
 .layout-3 .answer-checked .exercise__answer.is-selected:after {
-	top: inherit;
-	right: inherit;
-	left: 50%;
 }
-.layout-3 .answer-checked .exercise__answer.is-selected:before { margin-left: -62px; bottom: -36px;}
-.layout-3 .answer-checked .exercise__answer.is-selected:after { margin-left: -32px; bottom: -40px;}
+.layout-3 .answer-checked .exercise__answer.is-selected:before {top: 4px;right: 1px;}
+.layout-3 .answer-checked .exercise__answer.is-selected:after {content: none;}
 
 .layout-4 .answer-checked .exercise__answer.is-selected:before {
 	bottom: -35px;
@@ -435,11 +433,12 @@ a:focus {
 	padding: 0 1%;
 	display: inline-block;
 	vertical-align: top;
-	margin-bottom: 2.7em;
+	background-color: transparent;
 }
 .layout-3 .exercise__answer-text {
 	height: 100%;
 	display: table;
+	background-color: #FFEBB5;
 }
 .layout-3 .exercise__answer-text-inner {
 	display: table-cell;
