✔ 麻煩將所有標點，如逗號、冒號、問號 變做全形。 @done (15-08-04 22:22)  ✔ 計分時，以每個答案為一分，不是以每頁為一分。(如果同一題可選多過一個答案，就計每個對的答案為一分) @done (15-08-04 23:42)  ✔ 核對答案時，顯示答對了和答錯了不要用剔和交叉，因為有時會和選項相似，顯得混亂。請改為答對了用笑臉J，答錯了用不開心臉 L  (請看附件的smile_sad_button.ai   顏色用返你現在用那種就OK ) @done (15-08-05 22:53)  ✔ 核對答案時，不用在題號後加上剔或交叉 @done (15-08-05 22:59)  ✔ 在提交答案核對後，請不要再讓人改答案。直至重設後才可再選。  @done (15-08-05 23:59)  ✔ 在核對答案後，應該在任何一頁都可按「正確答案」，不只是最後一頁。 @done (15-08-06 00:02)  ✔ 正確答案的BUTTON 底色請變做黃色 (跟分數框一樣色，可參考附件的INTERFACE) @done (15-08-06 00:43)  ✔ Ex 1-1      只限這款練習。選了答案，如果答錯，要顯示「L 答錯了，請再選擇。」 @done (15-08-06 00:51)  ✔ Ex 1-1      只限這款練習。不用出「正確答案」的BUTTON @done (15-08-06 00:52)  ✔ Ex 1-3      第二頁，在問題下請加一句：（可選擇多於一個答案） @done (15-08-06 00:55)

--- a/css/main.css
+++ b/css/main.css
@@ -49,8 +49,18 @@ a:focus {
 }
 .button--exercise {
 	background: url(../img/button-exercise.png) no-repeat;
-	padding: 10px 30px 10px 13px;
+	padding: 3px;
 	width: 136px;
+	overflow: hidden;
+	position: relative;
+	background-image: none;
+	background-color: #FFF;
+	text-align: left;
+}
+.button-inner {
+	border: 2px dashed #E96D84;
+	padding: 4px 0 2px 10px;;
+	
 }
 .button--exercise.small {
 	background-position: 0px -45px;
@@ -58,6 +68,27 @@ a:focus {
 }
 .button--exercise .fa {
 	color: #91CDBB;
+}
+.button--exercise:before,
+.button--exercise:after {
+	content: '';
+	display: block;
+	position: absolute;
+	transform: rotate(236deg) skewX(17deg);
+	width: 320px;
+	height: 320px;
+	right: -338px;
+}
+.button--exercise:before {
+	background-color: #FFFFFF;
+	border: 2px dashed #E96D84;
+	bottom: -141px;
+	right: -332px;
+}
+.button--exercise:after {
+	bottom: -141px;
+	/*right: -394px;*/
+	background-color: #E96D84;
 }
 /* ==========================================================================
    Modules
@@ -122,10 +153,11 @@ a:focus {
 
 .exercise__question-number {
 	font-size: 2em;
-	padding-left: 40px;
+	padding-left: 46px;
 	background: url(../img/flower.png) no-repeat;
 	background-size: contain;
 }
+.exercise__question-number .fa {display: none;}
 
 .exercise__answer-list {
 	list-style-type: upper-alpha;
@@ -278,6 +310,11 @@ a:focus {
 	margin-bottom: 14px;
 }
 
+.show-answer-button,
+.show-answer-button:before {
+	background-color: #FFFBA0;
+}
+
 .check-answer-button,
 .show-answer-button,
 .first-question .owl-prev,
@@ -287,7 +324,8 @@ a:focus {
 	pointer-events: none;
 }
 .last-question .check-answer-button,
-.last-question .show-answer-button {
+.last-question .show-answer-button,
+.answer-checked .show-answer-button {
 	opacity: 1;
 	pointer-events: all;
 }
@@ -353,13 +391,16 @@ a:focus {
 /* ==========================================================================
    States control
    ========================================================================== */
+/* User can only choose answer when they click "Reset" to remove the .answer-checked */
+.answer-checked .exercise__answer {
+	pointer-events: none;
+}
 .answer-checked .exercise__answer.is-selected.is-correct-answer:after {
 	content: "答對了！";
 	color: #1EB53B;
 }
 .answer-checked .exercise__answer.is-selected.is-correct-answer:before {
-	content: "\f058";
-	color: #1EB53B;
+	background-image: url(../img/smile_face.svg);
 }
 .answer-checked .exercise__answer.is-selected:before,
 .answer-checked .exercise__answer.is-selected:after {
@@ -371,13 +412,13 @@ a:focus {
 	
 }
 .answer-checked .exercise__answer.is-selected:before {
-	content: "\f057";
-	color: #ED4D51;
-	font: normal normal normal 27px/1 FontAwesome;
-	text-rendering: auto;
-	-webkit-font-smoothing: antialiased;
-	-moz-osx-font-smoothing: grayscale;
-	transform: translate(0, 0);
+	content: '';
+	background-image: url(../img/sad_face.svg);
+	background-repeat: no-repeat;
+	background-size: contain;
+	width: 26px;
+	height: 26px;
+
 	margin-top: -15px;
 	right: -41px;
 }
@@ -398,7 +439,7 @@ a:focus {
 	bottom: -35px;
 	top: inherit;
 	left: 50%;
-	margin-left: -206px;;
+	margin-left: -62px;;
 }
 .layout-4 .answer-checked .exercise__answer.is-selected:after,
 .layout-7 .answer-checked .exercise__answer.is-selected:after {
@@ -436,7 +477,8 @@ a:focus {
 
 }
 .answer-revealed .exercise__answer.is-correct-answer {
-	border: 2px dashed #0B7E0D;
+	border: 3px dashed #0B7E0D;
+	background-color: #FFEBB5;
 }
 
 .fa.selected {
@@ -448,11 +490,20 @@ a:focus {
 .layout-1 .exercise__answer.is-selected {
 	background-color: #FF879D;
 }
-.layout-1 .show-answer-button {
-	display: inline-block!important;
-}
+.layout-1 .show-answer-button,
 .layout-1 .check-answer-button {
 	display: none;
+}
+.layout-1 .answer-checked .exercise__answer.is-selected:after {
+	content: "答錯了，請再選擇。";
+	right: -280px;
+}
+.layout-1 .answer-checked .exercise__answer.is-selected.is-correct-answer:after {
+	content: "答對了！";
+	right: -150px;
+}
+.layout-1 .answer-checked .exercise__answer {
+	pointer-events: all;
 }
 .layout-3 .exercise__answer-list {
 	text-align: center;
