Ex 2-1  圖片可細一點，每個框的大細可以因字的長短有點不同，最好不要變做兩行，現在比例有點怪，然後在每個圖片附近留位置核對答案

--- a/css/main.css
+++ b/css/main.css
@@ -511,11 +511,12 @@ a:focus {
 	text-align: center;
 }
 .layout-3 .exercise__answer {
-	width: 33%;
+	/*width: 33%;*/
 	padding: 0 1%;
 	display: inline-block;
 	vertical-align: top;
 	background-color: transparent;
+	margin-bottom: 50px;
 }
 .layout-3 .exercise__answer-text {
 	height: 100%;
@@ -525,6 +526,12 @@ a:focus {
 .layout-3 .exercise__answer-text-inner {
 	display: table-cell;
 	vertical-align: middle;
+}
+.layout-3 .exercise__answer-text .exercise__answer-image {
+	width: auto;
+	max-width: none;
+	height: 125px;
+
 }
 
 .layout-4 .exercise__question-content {
