Revert "顯示正確答案時，將綠色線加粗，及((將該項的底色加深)) <-- only this part"
This reverts commit 3b2f2303c8ed9e5aac2a0a8ad217a790f0f1d55e.

--- a/css/main.css
+++ b/css/main.css
@@ -533,10 +533,8 @@ a:focus {
 }
 .answer-revealed .exercise__answer.is-correct-answer {
 	border: 3px dashed #0B7E0D;
-	background-color: #CC9A14;
+	background-color: #FFEBB5;
 }
-.answer-revealed .exercise__answer.is-correct-answer,
-.answer-revealed .exercise__answer.is-correct-answer .fa {color: #fff}
 
 .fa.selected {
 	color: #563209;
