--- a/css/main.css
+++ b/css/main.css
@@ -160,7 +160,10 @@ a:focus {
 	background-size: contain;
 }
 .exercise__question-number .fa {display: none;}
-
+.exercise__answer-list-outer {
+	position: relative;
+	z-index: 10;
+}
 .exercise__answer-list {
 	list-style-type: upper-alpha;
 	list-style-position: inside;
@@ -174,6 +177,7 @@ a:focus {
 	position: relative;
 	background-color: #FFEBB5;
 	border: 3px dashed transparent;
+	cursor: pointer;
 }
 .exercise__answer .fa {
 	font-size: 1.5em;
@@ -350,7 +354,6 @@ a:focus {
 .dropzone {
 	background: #541D00;
 	color: #fff;
-	transition: background-color 0.3s;
 }
 
 .dropzone.over {background-color: #ddd!important;}
@@ -503,7 +506,8 @@ a:focus {
 .layout-5 .answer-checked .exercise__answer.is-selected:after,
 .layout-6 .answer-checked .qtype__tof .exercise__answer.is-selected:after,
 .layout-9 .answer-checked .exercise__answer.is-selected:after,
-.layout-11 .answer-checked .exercise__answer.is-selected:after
+.layout-11 .answer-checked .exercise__answer.is-selected:after,
+.layout-13 .answer-checked .exercise__answer.is-selected:after
 {
 	content: none;
 }
@@ -609,6 +613,12 @@ a:focus {
 	top: -1px;
 	left: 50%;
 	margin-left: -13px;;
+}
+.layout-13 .answer-checked .exercise__answer.is-selected:before {
+	right: 50%;
+	top: 53px;
+	margin-right: -13px;
+
 }
 .answer-revealed .exercise__answer.is-correct-answer {
 	border: 3px dashed #0B7E0D;
@@ -756,7 +766,8 @@ a:focus {
 }
 .layout-10 .dropzone,
 .layout-11 .dropzone,
-.layout-12 .dropzone
+.layout-12 .dropzone,
+.layout-13 .dropzone
 {
 	float: left;
 	background: #fff;
@@ -788,6 +799,7 @@ a:focus {
 	width: 25%;
 	margin-bottom: 30px;
 	min-height: 130px;
+	transition: background-color 0.3s;
 }
 .layout-12 .exercise__answer {
 	opacity: 1;
@@ -805,11 +817,78 @@ a:focus {
 .layout-12 .answer-checked .exercise__answer {
 	pointer-events: all;
 }
-.layout-12 .gu-transit {
+.layout-12 .gu-transit,
+.layout-13 .gu-transit {
 	display: none;
 }
 .layout-12 .answer-checked .exercise__answer.is-selected:before,
 .layout-12 .answer-checked .exercise__answer.is-selected:after
 {
 	content: none;
+}
+.layout-13 .dragzone {min-height: 0;margin: 0;padding: 0;}
+.layout-13 .dragzone .exercise__answer {
+	margin: 0;
+	background-color: transparent;
+	text-align: center;
+	padding: 0px 0 10px;
+}
+.layout-13 .dropzone {
+	width: 25%;
+	min-height: 130px;
+	background-color: transparent;
+	text-align: center;
+	margin: 0 0 30px 0;
+	border: 0;
+	padding-top: 30px;
+}
+.layout-13 .dragzones-outer {
+	padding-bottom: 100px;
+	margin-bottom: 0px;
+}
+.layout-13 .exercise__answer-text:after,
+.layout-13 .dropzone:after {
+	content: '';
+	display: block;
+	width: 10px;
+	height: 10px;
+	border-radius: 5px;
+	background-color: #4682B4;
+	position: absolute;
+	left: 50%;
+	margin-left: -5px;
+}
+.layout-13 .exercise__answer-text:after {
+	bottom: -1px;
+
+}
+.layout-13 .dropzone:after {
+	top: -4px;
+}
+.layout-13 .gu-mirror {
+	display: none!important;
+}
+.layout-13 .dropzone.over {
+	background-color: transparent!important;
+	color: #4682B4;
+    font-weight: bold;
+}
+
+svg {
+    /*border: 1px solid grey;*/
+}
+#draw-panel {
+	top: 0;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	width: 100%;
+	height: 100%;
+	position: absolute;
+	z-index: -1;
+}
+line {
+    stroke: steelblue;
+    stroke-width: 2px;
+    stroke-linecap: round;
 }
